--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "distantcam",
   "license": "MIT",
   "dependencies": {
+    "eslint": "^8.22.0",
     "phaser": "^3.54.0"
   },
   "devDependencies": {
@@ -42,12 +43,10 @@
     "electron": "^9.4.0",
     "electron-builder": "^22.10.5",
     "electron-reload": "^1.5.0",
-    "node-sass": "^4.14.1",
-    "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-static-files-copy": "^2.6.0",
     "rimraf": "^3.0.2",
-    "tslint": "^6.1.3",
+    "sass": "^1.54.4",
     "typescript": "^4.2.4"
   }
 }
