--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,9 @@
     "target": "es5",
     "module": "esnext",
     "strict": true,
-    "typeRoots": [
-      "./typings",
-      "./node_modules/"
-    ],
+    "typeRoots": ["./typings", "./node_modules/"],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*.ts",
-    "typings/**/*.d.ts"
-  ],
+  "include": ["src/**/*.ts", "typings/**/*.d.ts"]
 }
