--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "download-phaser-typedef": "download --out typings https://raw.githubusercontent.com/photonstorm/phaser3-docs/master/typescript/phaser.d.ts",
     "build": "rimraf build && parcel build src/main.ts src/index.html --public-url ./ -d build --out-file=main --target=electron",
     "watch": "rimraf build && parcel watch src/main.ts src/index.html --public-url ./ -d build --out-file=main --target=electron",
-    "app": "cross-env ELECTRON_DEBUG=true electron build/main.js",
+    "app": "cross-env electron build/main.js",
+    "app:debug": "cross-env ELECTRON_DEBUG=true electron build/main.js",
     "debug": "cross-env ELECTRON_DEBUG=vscode electron --remote-debugging-port=9223 build/main.js",
     "dist": "yarn build && electron-builder"
-  },
-  "homepage": "https://github.com/distantcam/phaser-electron-typescript-parcel",
-  "bugs": {
-    "url": "https://github.com/distantcam/phaser-electron-typescript-parcel/issues"
   },
   "build": {
     "appId": "parcel.electron",
@@ -31,7 +28,7 @@
     "phaser",
     "electron"
   ],
-  "author": "distantcam",
+  "author": "lordnahi",
   "license": "MIT",
   "dependencies": {
     "eslint": "^8.22.0",
